--- a/src/App.css
+++ b/src/App.css
@@ -24,4 +24,13 @@
   display: flex;
   align-items: center;
   color: white;
+  justify-content: space-between;
+  padding: 0 1rem;
+}
+
+.characters>img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  margin: 0 4px;
 }
