--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
   color: white;
   justify-content: space-between;
   padding: 0 1rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .characters>img{
