--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,17 @@
 }
 
 .mouse-menu{
-  background-color: bisque;
+  background-color: rgb(236, 139, 21);
   font-size: 1.2rem;
   position: absolute;
   width: 80px;
   padding: 2px 0px;
   display: none;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+.mouse-menu>p{
+  padding-left: 3px;
 }
 
 .mouse-menu>p:hover{
@@ -37,4 +42,8 @@
   height: 50px;
   border-radius: 50px;
   margin: 0 4px;
+}
+
+.decrease-opacity{
+  opacity: 0.3;
 }
