add game end screen

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 2;
 }
 
 .characters>img{
@@ -57,4 +58,27 @@
 
 .decrease-opacity{
   opacity: 0.3;
+}
+
+.game-screen{
+  /* z-index: 1;
+  position: absolute; */
+}
+
+.game-over-screen{
+  background-color: rgba(222, 184, 135, 0.5);
+  position: absolute;
+  height: 100vh;
+  top: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.game-over-screen>p{
+  font-size: 2rem;
 }
