add style to startpage

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,66 @@
   box-sizing: border-box;
 }
 
+html, body{
+  height: 100%;
+}
+
+.start-page{
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  /* align-items: center; */
+  /* height: 100%; */
+  padding: 1rem;
+}
+
+.startpage-heading, .startpage-refer-link, .startpage-gamechooser{
+  text-align: center;
+}
+
+.startpage-refer-link{
+  border: 1px solid green;
+  width: max-content;
+  margin:  0 auto;
+  padding: 0.8rem;
+  border-radius: 5px;
+  background-color: rgb(90, 189, 90);
+  color: white;
+}
+
+.Easy>img, .Medium>img, .Hard>img{
+  width: 250px;
+  height: 150px;
+}
+
+.Easy, .Medium, .Hard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  box-shadow: 1px 1px 7px 0.7px rgb(224, 223, 223);
+}
+
+.start-to-lead{
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+}
+
+.start-to-lead>p{
+  font-size: 1.2rem;
+}
+
+.start-to-lead>a>button{
+  padding: 0.8rem;
+  border: none;
+  background-color: rgb(230, 110, 110);
+  color: white;
+  font-size: 1.2rem;
+  border-radius: 4px;
+}
+
 .mouse-menu{
   background-color: rgb(236, 139, 21);
   font-size: 1.2rem;
@@ -80,8 +140,9 @@
 
 .game-modes{
   display: flex;
-  gap: 1rem;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
 }
 
 .game-modes>div{
