--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 *{
   padding: 0;
   margin: 0;
@@ -15,6 +17,9 @@ html, body{
   /* align-items: center; */
   /* height: 100%; */
   padding: 1rem;
+  font-family: 'Anton', sans-serif;
+  letter-spacing: 0.3px;
+  color: rgb(24, 23, 23);
 }
 
 .startpage-heading, .startpage-refer-link, .startpage-gamechooser{
@@ -36,12 +41,26 @@ html, body{
   height: 150px;
 }
 
+.Easy>p, .Medium>p, .Hard>p{
+  color: rgb(71, 71, 71);
+}
+
+.game-modes>a{
+  text-decoration: none;
+}
+
 .Easy, .Medium, .Hard{
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
   box-shadow: 1px 1px 7px 0.7px rgb(224, 223, 223);
+  border-radius: 5px;
+  gap: 3px;
+}
+
+.Easy:active, .Medium:active, .Hard:active{
+  transform: scale(0.9);
 }
 
 .start-to-lead{
@@ -51,6 +70,15 @@ html, body{
   align-items: center;
 }
 
+.start-to-lead>a>button:hover{
+  cursor: pointer;
+}
+
+.start-to-lead>a>button:active{
+  transform: scale(0.9);
+  background-color: rgb(165, 73, 73)
+}
+
 .start-to-lead>p{
   font-size: 1.2rem;
 }
@@ -58,10 +86,12 @@ html, body{
 .start-to-lead>a>button{
   padding: 0.8rem;
   border: none;
-  background-color: rgb(230, 110, 110);
+  background-color: rgb(224, 102, 102);
   color: white;
   font-size: 1.2rem;
   border-radius: 4px;
+  font-family: 'Anton', sans-serif;
+  letter-spacing: 0.3px;
 }
 
 .mouse-menu{
@@ -123,7 +153,9 @@ html, body{
 .game-over-screen{
   background-color: rgba(222, 184, 135, 0.5);
   position: absolute;
-  height: 100vh;
+  height: 500px;
+  width: 500px;
+  margin: 200px auto 0;
   top: 0;
   right: 0;
   left: 0;
@@ -132,6 +164,33 @@ html, body{
   align-items: center;
   justify-content: center;
   display: none;
+  font-family: 'Anton', sans-serif;
+  gap: 1rem;
+}
+
+.player-name-input{
+  font-size: 1.3rem;
+  padding: 10px;
+  font-family: 'Anton', sans-serif;
+  border-radius: 5px;
+  border: none;
+  width: 250px;
+}
+
+.save-score, .gameover-to-home{
+  font-family: 'Anton', sans-serif;
+  padding: 0.8rem;
+  font-size: 1.3rem;
+  border: none;
+  background-color: rgb(224, 102, 102);
+  border-radius: 4px;
+  color: white;
+  width: 250px;
+}
+
+.save-score:active, .game-over-screen:active{
+  background-color: rgb(165, 73, 73);
+  transform: scale(0.9);
 }
 
 .game-over-screen>p{
@@ -148,7 +207,7 @@ html, body{
 .game-modes>div{
   width: 200px;
   height: 200px;
-  background-color: cadetblue;
+  /* background-color: cadetblue; */
 }
 
 .game-modes>div:hover{
@@ -159,6 +218,11 @@ html, body{
   margin-top: 70px;
 }
 
+.leader-board{
+  font-family: 'Anton', sans-serif;
+  color: rgb(24, 23, 23);
+}
+
 .lead-to-home>a>button{
   padding: 0.8rem;
   margin: 4px;
@@ -167,6 +231,12 @@ html, body{
   border-radius: 4px;
   color: white;
   font-size: 1.1rem;
+  font-family: 'Anton', sans-serif;
+}
+
+.lead-to-home>a>button:active{
+  transform: scale(0.9);
+  background-color: rgb(165, 73, 73);
 }
 
 .leaderboard-heading{
@@ -175,9 +245,10 @@ html, body{
 
 .leaderboard-menu{
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   height: 200px;
+  gap: 4rem;
 }
 
 .leaderboard-menu>button{
@@ -187,6 +258,12 @@ html, body{
   color: white;
   font-size: 1.2rem;
   border-radius: 8px;
+  font-family: 'Anton', sans-serif;
+}
+
+.leaderboard-menu>button:active{
+  transform: scale(0.9);
+  background-color: rgb(86, 161, 190);
 }
 
 .score-row{
